--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
   <body>
     <div class="container"></div>
   </body>
-  <script src="/bundle.js"></script>
+  <script src="bundle.js" type="text/javascript" charset="utf-8"></script>
 </html>
